# 2Dscene

./: CMakeLists.txt  README.md  cyrcle.c  factory.c  factory.h  main.c  new.c  new.h  object.c  object.h  objects.c  objects.h  parcer.c  parcer.h  point.c  point.h  rect.c  rect.h  scene.c  scene.h  scene.txt  scene_img1  triangle.h  vline.c
lib/: console.c  new.c  new.h  slist.c
objects/: Shape.c  Shape.h  cyrcle.h  hline.c  hline.h  imports.h  new.c  parser.c  parser.h  point.c  point.h  rect.c  rect.h  scene.c  scene.h  triangle.c  vline.c  vline.h
oop/: object.c  object.h  parser.h
